--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,10 @@ altair==5.1.2
 annotated-types==0.6.0
     # via pydantic
 anyio==3.7.1
-    # via langchain
+    # via
+    #   httpx
+    #   langchain
+    #   openai
 async-timeout==4.0.3
     # via aiohttp
 attrs==23.1.0
@@ -26,7 +29,10 @@ blinker==1.7.0
 cachetools==5.3.2
     # via streamlit
 certifi==2023.7.22
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 charset-normalizer==3.3.2
     # via
     #   aiohttp
@@ -35,6 +41,8 @@ click==8.1.7
     # via streamlit
 dataclasses-json==0.6.2
     # via langchain
+distro==1.8.0
+    # via openai
 frozenlist==1.4.0
     # via
     #   aiohttp
@@ -43,9 +51,16 @@ gitdb==4.0.11
     # via gitpython
 gitpython==3.1.40
     # via streamlit
+h11==0.14.0
+    # via httpcore
+httpcore==1.0.2
+    # via httpx
+httpx==0.25.1
+    # via openai
 idna==3.4
     # via
     #   anyio
+    #   httpx
     #   requests
     #   yarl
 importlib-metadata==6.8.0
@@ -88,6 +103,8 @@ numpy==1.26.2
     #   pyarrow
     #   pydeck
     #   streamlit
+openai==1.3.2
+    # via -r requirements.in
 packaging==23.2
     # via
     #   altair
@@ -107,6 +124,7 @@ pydantic==2.5.1
     # via
     #   langchain
     #   langsmith
+    #   openai
 pydantic-core==2.14.3
     # via pydantic
 pydeck==0.8.1b0
@@ -141,7 +159,9 @@ six==1.16.0
 smmap==5.0.1
     # via gitdb
 sniffio==1.3.0
-    # via anyio
+    # via
+    #   anyio
+    #   httpx
 sqlalchemy==2.0.23
     # via langchain
 streamlit==1.28.2
@@ -156,8 +176,11 @@ toolz==0.12.0
     # via altair
 tornado==6.3.3
     # via streamlit
+tqdm==4.66.1
+    # via openai
 typing-extensions==4.8.0
     # via
+    #   openai
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
